# How2Work

./: README.md
NPDP/: README.md  what'sNPDP.md
NPDP/学习笔记/: 产品经理修炼之道.md
BusinessPractice/: BusinessTao.md  PM-HowtoGetSupport.md  online.md  关于技术人技能自我培养的建议.md  团队管理以人为本.md  基于云计算的极速产品研发效率.md  基于云计算的极速系统研发效率.md  精益管理理论方法、体系及实践.md
DevOps/: HowToUseGitLab.md  README.md  Redmine.md  SQL不是回避 DevOps 的理由.md  ToolChain.md  cmake.md  从开发到生产的全流程环境规划需解决的问题.md
DevOps/GitLab/: 00-Gitlab-CI.md  00-roles_in_git.md  02-编码_commit规范化.md  03-GitLab CI_PipelineFlow.md  03-GitLab CI执行流程  03-GitLab CI执行流程.md  05-artifacts_administration.md  09-构建高可用 Gitlab CI 服务.md  difference-gitlab-ee-ce.md  install-Gitlab-on_Aliyun.md
DevOps/PracticeRecord/: 2019Q1Summary.md  P1Summary.md  README.md
DevOps/cmakedemo/demo2/: CMakeLists.txt
DevOps/cmakedemo/demo2/include/: Employee.h
DevOps/cmakedemo/demo2/src/: Employee.cpp  mainapp.cpp
DevOps/cmakedemo/demo5/: CMakeLists.txt
NPDP/xmind/: NPDP530-20190317.xmind
Others/: DevRun 参会日志.md
ProductRD/: BranchModel.md  OAuth2.0.md  OpenSourceLicence.md  ProductQalityLevel.md  ProductVersionNumber.md  WriteTechfileByMarkdown.md  tool-spy-debugger.md  关于开源技术的引入的一些建议.md  关于引入开源技术的一些建议.md  开源技术的选型.md  测试方案设计：从需求到计划.md  面向企业市场的Apple开发者的工作流程.md
ProductRD/tools/: tool-charles.md  tool-monkey.md
ProductRD/weixin/: 微信公众号研发工作框架.md  微信开发者官网链接.md
Scrum/: 3Events-DailyScrum.md  5Events-DailyScrum.md  5Events-SprintReview.md  what's_scrum.md  敏捷导引.md
TechNote/: UseRedis.md  双十一来临如何保证业务系统的稳定性.md
TechNote/Container/: 关于 NAS 的使用.md  (+1 more)
(+11 files in other folders)
